apps/overlays/dev/ecommerce/frontend-service/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: frontend-service-kubelet-probes
  namespace: ecommerce
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: frontend-service
  ingress:
    - fromEntities:
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
